argocd/apps/guacamole/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: guacamole
  labels:
    name: guacamole
