argocd/apps/guacamole/guacd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: guacamole
  labels:
    app: guacd
spec:
  selector:
    matchLabels:
      app: guacd
  replicas: 1
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:1.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4822
      restartPolicy: Always
