argocd/apps/guacamole/guacamole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  guacamole
  namespace: guacamole
spec:
  selector:
    app:  guacamole
  type: ClusterIP
  ports:
    - name:  web
      port:  8080
      protocol: TCP
