argocd/apps/guacamole/guacd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  guacd
  namespace: guacamole
spec:
  selector:
    app:  guacd
  type: ClusterIP
  ports:
    - name:  guacd
      port:  4822
      protocol: TCP
