argocd/apps/guacamole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
spec:
  rules:
  - host: guacamole.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: guacamole
            port:
              number: 8080
